[tool.poetry]
name = "gpu_jobs"
version = "0.1.0"
description = "GPU jobs requirements for ecotaxa_back"
authors = ["Gro Lolo <grololo06@github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"
keras = "2.6.0"
tensorflow-hub = "0.12.0"
tensorflow_addons = "0.14.0"
protobuf = "3.19.1" # Let TF pick
pandas = "1.3.3"
opencv-python-headless = "4.5.2.54"
imgaug = "0.4.0"
scikit-learn = "1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
# Note: The original file had '--no-binary=imgaug'.
# In a pyproject.toml/pip environment, this is usually handled via pip flags
# (e.g., pip install --no-binary imgaug .) rather than inside the toml file itself.