[tool.poetry]
name = "gpu_jobs"
version = "0.1.0"
description = "GPU jobs requirements for ecotaxa_back"
authors = ["Gro Lolo <grololo06@github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.20.0" # Version moderne, compatible avec les nouveaux Python
tf-keras = "^2.16.0" # Le moteur Keras 2 porté sur le nouveau TF
tensorflow-hub = "^0.16.1"
pandas = "^2.2.0"
opencv-python-headless = "^4.10.0"
imgaug = "^0.4.0"
scikit-learn = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
# Note: The original file had '--no-binary=imgaug'.
# In a pyproject.toml/pip environment, this is usually handled via pip flags
# (e.g., pip install --no-binary imgaug .) rather than inside the toml file itself.